# largestack

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  FINAL_REVIEW_REPORT.md  FINAL_VALIDATION_SUMMARY.md  LICENSE  LOCAL_LLM_TESTING.md  MANIFEST.in  Makefile  README.md  RELEASE_STATUS.md  REVIEW_2026-06-06.md  ROADMAP.md  SECURITY.md  SECURITY_TRIAGE.md  TESTING_PLAYBOOK.md  TROUBLESHOOTING.md  WEBSITE_CONTENT.md  alembic.ini  constraints-release.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  largestack.yaml  llms.txt  mkdocs.yml  pyproject.toml  setup.py  setup_cython.py
.github/workflows/: check.yml  ci.yml  cross-platform.yml  release.yml  security.yml  test.yml  windows-validation.yml
alembic/: README.md  env.py
alembic/versions/: 0001_baseline.py
benchmarks/: README.md  agent_latency.py  bench_v2_concurrency.py  competitor_compare.py  decorator_overhead.py  results.json
case_studies/: README.md  legaldocs_in.md  sri_rajeshwari_nbfc.md
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml  init-db.sql  prometheus.yml
docs/: CONTROL_PLANE_READINESS.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  EXAMPLES.md  FINAL_95_PLUS_CERTIFICATION.md  PRODUCTION_READINESS.md  PRODUCTIZATION_PILLARS.md  PROVIDER_SETUP.md  QUICKSTART.md  SECURITY.md  SOAK_TEST.md  TESTING_AND_VALIDATION.md  TROUBLESHOOTING.md  api_reference.md  architecture.md  changelog.md  cli-reference.md  competitive-positioning.md  configuration.md  deployment.md  durable-orchestration.md  errors.md  examples-and-use-cases.md  fine_tuning.md  getting-started.md  github-repo-settings.md  how-it-works.md  index.md  installation.md  known-limitations.md  local-llm.md  migration.md  observability-monitoring.md  orchestration-guide.md  owasp-coverage.md  poc-offer.md  project-scaffold.md  provider-support.md  providers.md  public-launch-checklist.md  (+11 more)
docs/api/: agent.md  decorators.md  testing.md
docs/archive/: FINAL_RECHECK_AND_FIX_REPORT.md  FINAL_RELEASE_READINESS.md  FINAL_RELEASE_VALIDATION_RESULTS.md  FINAL_REMAINING_VALIDATION_RESULTS.md  NEXUS_PRODUCTION_FIX_REPORT.md  RELEASE_TEST_RESULTS.md
docs/compliance/: INCIDENT_RESPONSE.md  SECURITY_POLICY.md  SOC2_READINESS.md
docs/concepts/: agents.md  guardrails.md  memory.md  tools.md  workflows.md
docs/cookbook/: 01_kyc_pipeline.md  02_gst_validation.md  03_hindi_aadhaar_redaction.md  04_multi_tenant_nbfc.md  05_dpdp_audit_chain.md  06_esign_workflow.md  07_mca_lookup.md  08_agent_yaml_compliance.md  09_studio_export.md  10_a2a_interop.md  README.md  index.md  india-recipes.md  mcp-server.md  multi-agent.md  rag-pdf.md  streaming.md  structured-output.md  support-bot.md  testing.md  tika-loader.md
docs/errors/: NEXUS_ALL_FAILED.md  NEXUS_BUDGET.md  NEXUS_CONTEXT.md  NEXUS_GUARDRAIL.md  NEXUS_KILL_SWITCH.md  NEXUS_LOOP.md  NEXUS_PROVIDER.md  NEXUS_PROVIDER_AUTH.md  NEXUS_RATE_LIMIT.md  NEXUS_TOOL.md  NEXUS_TOOL_PERM.md  NEXUS_UNKNOWN.md
docs/guides/: cost_control.md  custom_tools.md  production_deployment.md  secure_rag.md  testing_agents.md
docs/protocols/: a2a.md  agui.md  mcp.md
docs/tutorials/: 01_first_agent.md  02_tools_and_functions.md  03_multi_agent_teams.md  04_guardrails.md  05_rag_knowledge.md
enterprise_jarvis/: .env.example  README.md  requirements.txt  run.py  test_ejarvis.py
enterprise_jarvis/ejarvis/: __init__.py  agent.py  config.py  context.py  knowledge.py  rbac.py  schemas.py  store.py
enterprise_jarvis/knowledge/: hr_leave_policy.md  it_support.md  security_policy.md
examples/: 00_offline_test_model.py  README.md  _provider.py
examples/01_hello/: main.py
examples/02_tools/: main.py
examples/03_team/: main.py
examples/04_guards/: main.py
examples/05_rag_knowledge/: main.py
examples/06_secure_rag/: README.md  main.py
examples/06_streaming/: main.py
examples/07_structured/: main.py
examples/08_mcp_server/: main.py
examples/09_multi_provider/: main.py
examples/10_full_app/: main.py
examples/eval/: indian_fintech_kyc.yaml
examples/fintech_kyc/: fintech_kyc.py
examples/local_llm_ollama/: README.md  agent.py  chat_only.py
examples/multi_agent_research/: multi_agent_research.py
examples/observability/: observability.py
examples/orchestrator_patterns/: main.py
examples/provider_flow_demo/: main.py
examples/rag_basic/: rag_basic.py
examples/resilient_llm/: resilient_llm.py
examples/riva_ai/: pipeline_demo.py  three_modes_demo.py
examples/showcase/: ten_projects.py
jarvis_app/: .env.example  README.md  requirements.txt  run.py  test_jarvis.py
jarvis_app/jarvis/: __init__.py  assistant.py  config.py  memory_store.py  tools.py
jarvis_app/knowledge/: about.md
largestack/: __init__.py  agent.py  autonomous_builder.py  decorators.py  errors.py  guardrails.py  memory.py  observability.py  orchestrator.py  owasp.py  provider_matrix.py  rag.py  secure_rag.py  serve.py  team.py  testing.py  types.py  workflow.py
largestack/_a2a/: __init__.py  multimodal.py  v03.py
largestack/_cli/: main.py  (+6 more)
largestack_license/: Cargo.toml  pyproject.toml
largestack_license/src/: lib.rs
pricing/: models.yaml
release_evidence/: DEEPSEEK_BUILD_PROJECTS_LATEST.md  FINAL_PUBLIC_VALIDATION_20260524-134056.md  FINAL_PUBLIC_VALIDATION_20260524-134723.md  FINAL_PUBLIC_VALIDATION_20260528-201351.md  FINAL_PUBLIC_VALIDATION_LATEST.md  JARVIS_CAPSTONE_LATEST.md  README.md  REAL_AUTONOMOUS_100_LATEST.md  REAL_PROJECTS_CAPSTONE_LATEST.md  RELEASE_REVIEW_2026-06-07.md
scripts/: build_production_wheel.sh  check_changelog.sh  deepseek_build_projects_live.py  final_95_plus_certify.py  final_release_validate.sh  jarvis_capstone_live.py  largestack_real_feature_certify.py  load_soak_certify.py  load_test.py  productization_100.py  real_autonomous_100.py  real_projects_capstone.py  release_gate.sh  run_pytest_matrix.py  scenario_breach_dpdp.py  scenario_kyc_nbfc.py  scenario_rag_legaltech.py  scenarios_100.py  smoke_test_e2e.py  soak_smoke.py  vectorstores_e2e.py
(+1120 files in other folders)
