[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "largestack"
version = "1.0.1"
description = "Largestack AI — production-grade candidate framework for typed agents, tools, RAG, guardrails, observability, and orchestration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{name = "RivaiLabs"}]
maintainers = [{name = "RivaiLabs", email = "hello@largestack.ai"}]
keywords = ["ai", "agents", "llm", "framework", "mcp", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "httpx[http2]>=0.28.1",
    "anyio>=4.13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "typer>=0.12",
    "rich>=13.0",
    "fastapi>=0.128.2",
    "uvicorn[standard]>=0.46.0",
    "starlette>=1.0.1,<2.0.0",
    "jinja2>=3.1",
    "sse-starlette>=3.4.2",
    "cryptography>=42.0",
    "defusedxml>=0.7.1",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://largestack.ai"
Documentation = "https://docs.largestack.ai"
Repository = "https://github.com/Rivailabs/largestack"
Issues = "https://github.com/Rivailabs/largestack/issues"
Changelog = "https://github.com/Rivailabs/largestack/releases"
PyPI = "https://pypi.org/project/largestack/"

[project.optional-dependencies]
openai = ["openai>=1.50", "tiktoken>=0.7"]
anthropic = ["anthropic>=0.40"]
otel = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
guard = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
rag = ["sentence-transformers>=3.0", "beautifulsoup4>=4.12", "faiss-cpu>=1.8", "duckdb>=0.10", "qdrant-client>=1.9"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-timeout>=2.3", "hypothesis>=6.0", "respx>=0.22"]
postgres = ["psycopg[binary,pool]>=3.1", "sqlalchemy>=2.0"]
migrations = ["alembic>=1.13", "sqlalchemy>=2.0"]
all = ["largestack[openai,anthropic,otel,guard,rag,test,litellm,mcp,dev-server,postgres,migrations,office]"]
dev = ["largestack[all]", "ruff>=0.5", "mypy>=1.10"]
docs = ["mkdocs-material>=9.5", "pymdown-extensions>=10.0", "mkdocstrings[python]>=0.24"]
litellm = ["litellm>=1.83.14"]
mcp = ["fastapi>=0.110", "uvicorn>=0.27"]
dev-server = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "watchfiles>=0.21"]
office = ["openpyxl>=3.1", "python-pptx>=0.6.23", "pandas>=2.2"]

[project.scripts]
largestack = "largestack._cli.main:app"

[tool.setuptools.packages.find]
include = ["largestack*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
