[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "largestack"
version = "1.1.0"
description = "Largestack AI — a Beta Python framework for typed agents, tools, RAG, guardrails, observability, and orchestration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{name = "RivaiLabs", email = "hello@largestack.ai"}]
maintainers = [{name = "RivaiLabs", email = "hello@largestack.ai"}]
keywords = ["ai", "agents", "llm", "framework", "mcp", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "httpx[http2]>=0.28.1",
    "anyio>=4.13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "typer>=0.12",
    "rich>=13.0",
    "fastapi>=0.128.2",
    "uvicorn[standard]>=0.46.0",
    "starlette>=1.0.1,<2.0.0",
    "jinja2>=3.1",
    "sse-starlette>=3.4.2",
    "cryptography>=42.0",
    "defusedxml>=0.7.1",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://largestack.ai"
Documentation = "https://docs.largestack.ai"
Repository = "https://github.com/Rivailabs/largestack"
Issues = "https://github.com/Rivailabs/largestack/issues"
Changelog = "https://github.com/Rivailabs/largestack/releases"
PyPI = "https://pypi.org/project/largestack/"

[project.optional-dependencies]
openai = ["openai>=1.50", "tiktoken>=0.7"]
anthropic = ["anthropic>=0.40"]
otel = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
guard = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
rag = ["sentence-transformers>=3.0", "beautifulsoup4>=4.12", "faiss-cpu>=1.8", "duckdb>=0.10", "qdrant-client>=1.9"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-timeout>=2.3", "hypothesis>=6.0", "respx>=0.22", "pytest-cov>=5.0"]
postgres = ["psycopg[binary,pool]>=3.1", "sqlalchemy>=2.0"]
migrations = ["alembic>=1.13", "sqlalchemy>=2.0"]
all = ["largestack[openai,anthropic,otel,guard,rag,test,litellm,mcp,dev-server,postgres,migrations,office,tika]"]
dev = ["largestack[all]", "ruff>=0.5", "mypy>=1.10"]
docs = ["mkdocs-material>=9.5", "pymdown-extensions>=10.0", "mkdocstrings[python]>=0.24"]
litellm = ["litellm>=1.83.14"]
mcp = ["fastapi>=0.110", "uvicorn>=0.27"]
dev-server = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "watchfiles>=0.21"]
office = ["openpyxl>=3.1", "python-pptx>=0.6.23", "pandas>=2.2"]
tika = ["tika>=3.1.0"]

[project.scripts]
largestack = "largestack._cli.main:app"

[tool.setuptools.packages.find]
include = ["largestack*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Lint policy = CORRECTNESS, not formatting. Pure style/formatting rules
# (E1/E2/E3/E5, E701/E702/E4xx) are delegated to `ruff format` and not gated here.
# F401 (unused-import) is not gated tree-wide because the codebase uses
# optional-dependency *probe* imports that ruff cannot distinguish from dead code.
# Real-bug rules (undefined names, redefinitions, unused vars, bad comparisons,
# invalid escapes, f-strings) ARE gated.
select = ["F", "E711", "E712", "E713", "E714", "W605", "E9"]
# F401 (unused import) and F841 (unused variable) are not gated: both have
# autofixes that would delete optional-dependency probe imports / side-effecting
# calls. They are cosmetic, not correctness, so we don't fail CI on them.
ignore = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
# Package __init__ files intentionally re-export their public API.
"__init__.py" = ["F401", "F403"]

[tool.coverage.run]
branch = false
omit = ["tests/*", "*/_templates/*", "examples/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]

# Wedge = the public surface we hold to a real coverage bar (see ci.yml coverage gate).
# Measured directly via: pytest --cov=largestack.agent --cov=largestack._core.engine ...
