[package]
name = "largestack_license"
version = "0.1.0"
edition = "2021"

[lib]
name = "largestack_license"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
